--- a/styles/Campus.module.css
+++ b/styles/Campus.module.css
@@ -1,24 +1,30 @@
+.page{
+  background: url("../asserts/Home.png") no-repeat;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    top: 50vh;
+  display: flex;
   }
   
   .item {
+    width: 10vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: 0 20px;
     padding: 20px;
-    border-radius: 10px 10px 10px 10px;
-    border: solid 1px  black;
+    border-radius: 16px;
+    background-color: rgb(255,255,255,0.8);
   }
   
   .item:hover {
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     border: none;
   }
   
@@ -26,14 +32,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 70px;
     height: 70px;
+    width: auto;
     border-radius: 50%;
     position: relative;
-    top: -5vh;
+    top: -8vh;
     overflow: hidden;
-    z-index: 2;
-    border: solid 1.5px  black;
+    z-index: 1;
+    border: solid 1px  black;
   }
   
   .image {
