--- a/styles/Blog.module.css
+++ b/styles/Blog.module.css
@@ -1,10 +1,19 @@
+.page{
+    background: url("../asserts/Home.png") no-repeat;
+    background-size: cover;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 .head {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
     position: relative;
-    top: 14vh;
+    top: 5vh;
     margin: 0 auto;
     max-width: 800px;
   }
@@ -31,4 +40,9 @@
     font-size: 18px;
     line-height: 1.5;
   }
-  
+ .color{
+    background-color: rgb(255,255,255,0.8);
+    width: 100vw;
+    height: 100vh;
+
+ } 
